--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,6 +148,7 @@ body {
   @apply h-10 border border-input bg-background rounded-md rounded-r-none border-r-0 flex items-center justify-center;
   padding-left: 0.5rem;
   padding-right: 0.25rem;
+  pointer-events: none; /* Desactiva los clics en el contenedor de la bandera */
 }
 
 .phone-input-root .PhoneInputCountryIcon {
@@ -171,7 +172,9 @@ body {
 }
 
 /* Hide the country name and calling code in the dropdown */
-.PhoneInputCountrySelect-option .PhoneInputCountrySelect-name,
+.PhoneInputCountrySelect-option .PhoneInputCountrySelect-name {
+  display: none;
+}
 .PhoneInputCountrySelect-option .PhoneInputCountrySelect-callingCode {
   display: none;
 }
