--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -277,4 +277,15 @@ body {
         background-position: 100% 50%;
     }
   }
+
+  .chat-background {
+      background-image: url('/whatsapp_bg.png');
+      background-repeat: repeat;
+      background-position: center;
+      opacity: 0.05;
+  }
+
+  .dark .chat-background {
+      opacity: 0.08;
+  }
 }
