--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,7 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-transparent text-foreground;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
@@ -281,4 +281,3 @@ body {
       opacity: 0.08;
   }
 }
-
